<resources>
    <string name="app_name">灾险情上报</string>
    <string name="loginName">云南省地质灾害</string>
    <string name="inputUser">请输入手机号</string>
    <string name="login">登录</string>
    <string name="local_base_url">"http://183.230.252.112:12020/yncmd/</string>
    <!--<string name="local_base_url">"http://183.224.17.33:8085/yncmd/</string>-->
    <!--<string name="local_base_url">"http://192.168.10.164:8080/yncmd/</string>-->
     n<string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <!--修改密码-->
    <string name="modify_user">用户名：</string>
    <string name="modify_psw">原密码：</string>
    <string name="modify_npsw">新密码：</string>
    <string name="modify_anpsw">再次输入新密码：</string>
    <string name="modify_clear">取消</string>
    <string name="modify_sure">确认</string>
    <string name="password_success">密码修改成功</string>
    <!--disasterReport-->
    <string name="dReportPersonnel">填报人：</string>
    <string name="dReportPhone">手机号码：</string>
    <string name="dReportTime">发现时间：</string>
    <string name="dReportAddress">详细地址：</string>
    <string name="dReportLocation">所在地区：</string>
    <string name="dReportType">灾种类型：</string>
    <string name="dReportFactor">诱发因素：</string>
    <string name="dReportInjurd">受伤人数：</string>
    <string name="dReportDeath">死亡人数：</string>
    <string name="dReportMiss">失踪人数：</string>
    <string name="dReportFram">受灾农田(亩)：</string>
    <string name="dReportHouse">损毁房屋(间)：</string>
    <string name="dReportMoney">损失财产(万元)：</string>
    <string name="dReportLon">经度：</string>
    <string name="dReportLat">纬度：</string>
    <string name="pleaseInput">请输入...</string>
    <string name="mustInput">请输入(必填)...</string>
    <string name="mustSelect">请选择(必选)</string>
    <string name="dReportMobile">联系电话：</string>
    <string name="dReportName">联系人：</string>
    <string name="dReportOther">其他信息</string>
    <string name="dReportHandle">处置意见：</string>
    <string name="personDanger">威胁人数：</string>
    <string name="houseDanger">威胁房屋(间)：</string>
    <string name="moneyDanger">潜在经济损失(万元)：</string>
    <string name="areaDanger">威胁农田(亩)：</string>
    <string name="disasterNum">灾情编号：</string>
    <string name="xqNum">险情编号：</string>
    <string name="foreLevel">预报灾情等级：</string>
    <string name="level">灾情等级：</string>
</resources>
