<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/foreLevel" />

            <TextView
                android:id="@+id/foreLevel"
                style="@style/disasterStyle" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/level" />

            <TextView
                android:id="@+id/level"
                style="@style/disasterStyle"
                android:hint="暂未处理" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportPersonnel" />

            <TextView
                android:id="@+id/userShow"
                style="@style/disasterStyle" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportPhone" />

            <TextView
                android:id="@+id/phoneShow"
                style="@style/disasterStyle" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportTime" />

            <TextView
                android:id="@+id/timeShow"
                style="@style/disasterStyle"
                android:hint="请选择...(必填)" />
        </LinearLayout>

        <TextView
            style="@style/myDivide"
            android:layout_marginBottom="10dp" />

        <TextView
            style="@style/myTextTitle"
            android:text="地点" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportLocation" />

            <TextView
                android:id="@+id/locationShow"
                style="@style/disasterStyle"
                android:hint="请输入...(必填)" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportAddress" />

            <TextView
                android:id="@+id/addressShow"
                style="@style/disasterStyle"
                android:hint="请输入...(必填)" />
        </LinearLayout>


        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportLon"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lonShow"
                style="@style/disasterStyle" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportLat" />

            <TextView
                android:id="@+id/latShow"
                style="@style/disasterStyle" />
        </LinearLayout>

        <TextView
            style="@style/myDivide"
            android:layout_marginBottom="10dp" />

        <TextView
            style="@style/myTextTitle"
            android:text="诱因/类型" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/disasterNum" />

            <TextView
                android:id="@+id/disNumShow"
                style="@style/disasterStyle" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportType" />

            <Spinner
                android:id="@+id/typeShow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:entries="@array/dangerType" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportFactor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/factorShow"
                style="@style/disasterStyle" />
        </LinearLayout>


        <TextView
            style="@style/myDivide"
            android:layout_marginBottom="10dp" />

        <TextView
            style="@style/myTextTitle"
            android:text="灾情" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportInjurd" />

            <TextView
                android:id="@+id/injurdShow"
                style="@style/disasterStyle"
                android:inputType="number" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportDeath" />

            <TextView
                android:id="@+id/deathShow"
                style="@style/disasterStyle"
                android:inputType="number" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportMiss" />

            <TextView
                android:id="@+id/missShow"
                style="@style/disasterStyle"
                android:inputType="number" />
        </LinearLayout>

        <TextView style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportFram"
               />

            <TextView
                android:id="@+id/farmShow"
                style="@style/disasterStyle"
                android:inputType="number" />
        </LinearLayout>

        <TextView
          style="@style/myDivide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
             style="@style/myLeftText"
                android:text="@string/dReportHouse"
                 />

            <TextView
                android:id="@+id/houseShow"
                style="@style/disasterStyle"
                android:inputType="number" />
        </LinearLayout>

        <TextView
           style="@style/myDivide"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportMoney"
                />

            <TextView
                android:id="@+id/moneyShow"
                style="@style/disasterStyle"
                android:hint="请输入...(必填)"
                android:inputType="number|numberDecimal" />
        </LinearLayout>

        <TextView
            style="@style/myDivide"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/ll_dReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/myTextTitle"
                android:text="群众上报人信息" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                   style="@style/myLeftText"
                    android:text="@string/dReportMobile"
                    />

                <TextView
                    android:id="@+id/mobileShow"
                    style="@style/disasterStyle" />
            </LinearLayout>

            <TextView
               style="@style/myDivide"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                 style="@style/myLeftText"
                    android:text="@string/dReportName"
                     />

                <TextView
                    android:id="@+id/nameShow"
                    style="@style/disasterStyle" />
            </LinearLayout>

            <TextView
                style="@style/myDivide" />
        </LinearLayout>

            <TextView
                style="@style/myTextTitle"
                android:text="@string/dReportOther"
               />

            <TextView
                android:id="@+id/otherShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_report"
                android:hint="@string/pleaseInput"
                android:padding="5dp"
                android:textSize="16sp" />

        <TextView
            style="@style/myDivide" />

        <LinearLayout
            android:id="@+id/ll_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/myTextTitle"
                android:text="处置信息"/>

            <TextView
                style="@style/myLeftText"
                android:text="@string/dReportHandle"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/et_handle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_report"
                android:hint="@string/pleaseInput"
                android:padding="5dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    style="@style/myLeftText"
                    android:text="处置人：" />

                <EditText
                    android:id="@+id/disposePerson"
                    style="@style/disasterStyle" />
            </LinearLayout>

            <TextView
                style="@style/myDivide" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    style="@style/myLeftText"
                    android:text="处置人电话："
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/disposeMobile"
                    style="@style/disasterStyle" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>